Dependencies/MELibraries/32/Delphi/MEGSV.PAS

{$A+,B-,D-,H-,I+,J-,L-,M-,O-,P-,Q-,R-,T-,U-,V+,W-,X+,Y-,Z4}

(*************************************************)
(*                                               *)
(*  Delphi-Unit for GSV-Functions in MEGSV.DLL   *)
(*  Version 1.50                                 *)
(*                                               *)
(*  Copyright (C) Dr. Holger Kabelitz 1999-2009  *)
(*  All rights reserved.                         *)
(*                                               *)
(*  Dr. Holger Kabelitz                          *)
(*  D-13507 Berlin                               *)
(*  Germany                                      *)
(*                                               *)
(*************************************************)

unit MEGSV;

interface

const
  GSV_OK = 0;
  GSV_ERROR = -1;
  GSV_TRUE = 1;
  GSV_MEMORY_OK = GSV_OK;
  GSV_MEMORY_OK_FUNCTION = $01;
  GSV_MEMORY_ERROR_ABORT = $FF;
  GSV_MEMORY_ERROR_SEVERE = $10;
  GSV_MEMORY_ERROR_NA = $11;
  GSV_MEMORY_ERROR_DATA = $12;
  GSV_MEMORY_ERROR_FAILED = $1E;
  GSV_MEMORY_ERROR_DENIED = $1F;
  GSV_LINEAR_EXECUTE = 0;
  GSV_LINEAR_TEST_ALL = 1;
  GSV_LINEAR_TEST_SLOPES = 2;
  GSV_LINEAR_TEST_POINTS = 3;
  GSV_LINEAR_SORT = $4000;
  GSV_LINEAR_INFO = 0;
  GSV_LINEAR_INITIALIZE = -4;
  GSV_LINEAR_OFFSETZERO = -2;
  GSV_LINEAR_COUNTER = 1;
  GSV_LINEAR_ERROR_CODE = $3C00;
  GSV_LINEAR_ERROR_POINT = $00FF;
  GSV_LINEAR_ERROR_ACT = $0100;
  GSV_LINEAR_ERROR_REF = $0200;
  GSV_LINEAR_ERROR_OK = GSV_OK;
  GSV_LINEAR_ERROR_NOIFC = $0400;
  GSV_LINEAR_ERROR_UNKNOWNIFC = $0800;
  GSV_LINEAR_ERROR_NPOINTS = $0C00;
  GSV_LINEAR_ERROR_RANGE = $1000;
  GSV_LINEAR_ERROR_ORDER = $1400;
  GSV_LINEAR_ERROR_SLOPE = $1800;
  GSV_LINEAR_ERROR_LOCKED = $1C00;
  GSV_LINEAR_ERROR_INCOMPLETE = $2000;
  GSV_LINEAR_ERROR_PARAMETER = $2400;
  GSV_LINEAR_ERROR_GAIN = $2800;
  GSV_LINEAR_ERROR_SENSITIVITY = $2C00;
  GSV_LINEAR_ERROR_NOTIMPLEMENTED = $3000;
  GSV_ACTEX_FLAG_BAUDRATE = $00000001;
  GSV_ACTEX_FLAG_WAKEUP = $00000002;
  GSV_ACTEX_FLAG_HANDSHAKE = $00000004;
  GSV_STATUS_MASK_SWITCH = $10;
  GSV_STATUS_MASK_SWITCH2 = $08;
  GSV_CANSET_MANUFACTURER_ID = $00;
  GSV_CANSET_COMMAND_ID = $01;
  GSV_CANSET_MESSAGE_ID = $02;
  GSV_CANSET_BAUD = $7E;
  GSV_CANSET_FLAGS = $7F;
  GSV_CANSET_20B = $80;
  ME_INTSTAT_FLUSH = $00000001;

type
  PDouble = ^Double;
  PInteger = ^Integer;
  PByte = ^Byte;
  MEreservedExecProc = function (no:Integer; arg:Pointer):Integer stdcall;
  GSV_ACTIVATE_EXTENDED = record
                            actex_size : LongInt;
                            actex_buffersize : LongInt;
                            actex_flags : LongInt;
                            actex_baudrate : LongInt;
                          end;

const
  GSV_ACTEX_SIZE = SizeOf(GSV_ACTIVATE_EXTENDED);

function GSVversion:LongInt; stdcall;

function GSVmodel(no:Integer):Integer; stdcall;

function MEreservedExec(no, code:Integer; rexpro:MEreservedExecProc; arg:Pointer):Integer; stdcall;

function MErequestEvent(no:Integer):Integer; stdcall;

function GSVrevision:LongInt; stdcall;

function GSVgetLocalBaudRate(no:Integer):LongInt; stdcall;

function GSVactivateExtended(no:Integer; var actex:GSV_ACTIVATE_EXTENDED):Integer; stdcall;

function GSVactivate(no:Integer; buffersize:LongInt):Integer; stdcall;

procedure GSVrelease(no:Integer); stdcall;

function GSVinitialize(no:Integer):Integer; stdcall;

function GSVflushBuffer(no:Integer):Integer; stdcall;

function MEinternalStatus(no:Integer):LongInt; stdcall;

function GSVgetValues(no:PInteger; n:Integer):Integer; stdcall;

function MEsendBytesToDevices(no:PInteger; n:Integer; var pbuf; count:Integer):Integer; stdcall;

function MEsendBytes(no:Integer; var pbuf; count:Integer):Integer; stdcall;

function GSVreceived(no:Integer):Integer; stdcall;

function GSVread(no:Integer; var ad:Double):Integer; stdcall;

function GSVreadMultiple(no:Integer; ad:PDouble; count:Integer; var valsread:Integer):Integer; stdcall;

function GSVcopyMemory(no, dc, addr:Integer; var buffer):Integer; stdcall;

function GSVcheckMemory(no, dc, addr:Integer; buffer:PByte):Integer; stdcall;

function GSVreadStatus(no:Integer; var ad:Double; var ps:Byte):Integer; stdcall;

function GSVreadStatusMultiple(no:Integer; ad:PDouble; ps:PByte; count:Integer; var valsread:Integer):Integer; stdcall;

function GSVcopyLinear(no:Integer; pd:PDouble; nd:Integer; pr:PInteger):Integer; stdcall;

function GSVasynchronousSendBytes(no:Integer; var pbuf; count:Integer; handle:Pointer):Integer; stdcall;

function GSVsynchronizeSendBytes(no:Integer):Integer; stdcall;

function GSVgetOptionsCode(no:Integer):Integer; stdcall;

function GSVgetOptionsExtension3(no:Integer):Integer; stdcall;

function GSVgetOptionsLinear(no:Integer):Integer; stdcall;

function GSVgetOptionsExtension21(no:Integer):Integer; stdcall;

function GSVgetOptionsSleepMode(no:Integer):Integer; stdcall;

function GSVgetOptionsCommandTest(no:Integer):Integer; stdcall;

function MEwriteRanges(no, channel, inx:Integer; ia:LongInt):Integer; stdcall;

function GSVisBipol(no:Integer):Integer; stdcall;

function GSVgetFreq(no:Integer):Double; stdcall;

function GSVgetGain(no:Integer):Integer; stdcall;

function GSVgetChannel(no:Integer):Integer; stdcall;

function MEsetModeLock(no, slock:Integer; id:PChar):Integer; stdcall;

function GSVgetModeLock(no:Integer):Integer; stdcall;

function GSVsetModeLinear(no, lin:Integer):Integer; stdcall;

function GSVgetModeLinear(no:Integer):Integer; stdcall;

function GSVsetModeAverage(no, avg:Integer):Integer; stdcall;

function GSVgetModeAverage(no:Integer):Integer; stdcall;

function GSVsetModeSI(no, msi:Integer):Integer; stdcall;

function GSVgetModeSI(no:Integer):Integer; stdcall;

function GSVsetModeText(no, mt:Integer):Integer; stdcall;

function GSVgetModeText(no:Integer):Integer; stdcall;

function GSVsetModeMax(no, mx:Integer):Integer; stdcall;

function GSVgetModeMax(no:Integer):Integer; stdcall;

function GSVsetModeLog(no, lg:Integer):Integer; stdcall;

function GSVgetModeLog(no:Integer):Integer; stdcall;

function GSVsetModeWindow(no, win:Integer):Integer; stdcall;

function GSVgetModeWindow(no:Integer):Integer; stdcall;

function GSVhasLCD(no:Integer):Integer; stdcall;

function GSVhasADC(no:Integer):Integer; stdcall;

function GSVhasUII(no:Integer):Integer; stdcall;

function GSVisSI(no:Integer):Integer; stdcall;

function GSVisWL(no:Integer):Integer; stdcall;

function GSVhasAF(no:Integer):Integer; stdcall;

function GSVsetBridgeType(no, bt:Integer):Integer; stdcall;

function GSVgetBridgeType(no:Integer):Integer; stdcall;

function GSVsetBridgeInternal(no, bi:Integer):Integer; stdcall;

function GSVgetBridgeInternal(no:Integer):Integer; stdcall;

function GSVresetStatus(no:Integer):Integer; stdcall;

function GSVgetScale(no:Integer):LongInt; stdcall;

function GSVgetZero(no:Integer):LongInt; stdcall;

function GSVgetControl(no:Integer):LongInt; stdcall;

function GSVgetOffset(no:Integer):LongInt; stdcall;

function GSVwriteScale(no:Integer; scale:LongInt):Integer; stdcall;

function GSVwriteZero(no:Integer; zero:LongInt):Integer; stdcall;

function GSVwriteControl(no:Integer; control:LongInt):Integer; stdcall;

function GSVwriteOffset(no:Integer; offset:LongInt):Integer; stdcall;

function GSVgetAll(no, pos:Integer):Integer; stdcall;

function GSVsaveAll(no, pos:Integer):Integer; stdcall;

function GSVsetCal(no:Integer):Integer; stdcall;

function GSVsetZero(no:Integer):Integer; stdcall;

function GSVsetScale(no:Integer):Integer; stdcall;

function GSVsetOffset(no:Integer):Integer; stdcall;

function GSVDispSetUnit(no, dispunit:Integer):Integer; stdcall;

function GSVDispSetNorm(no:Integer; norm:Double):Integer; stdcall;

function GSVDispSetDPoint(no, dpoint:Integer):Integer; stdcall;

function GSVsetFreq(no:Integer; freq:Double):Integer; stdcall;

function GSVsetGain(no, gain:Integer):Integer; stdcall;

function GSVsetBipolar(no:Integer):Integer; stdcall;

function GSVsetUnipolar(no:Integer):Integer; stdcall;

function MEsetCal(no:Integer; cal:Double):Integer; stdcall;

function MEgetCal(no:Integer):Double; stdcall;

function MEsendID(no:Integer; id:PChar):Integer; stdcall;

function GSVDispGetNorm(no:Integer):Double; stdcall;

function GSVDispGetUnit(no:Integer):Integer; stdcall;

function GSVDispGetDPoint(no:Integer):Integer; stdcall;

function GSVswitch(no, on:Integer):Integer; stdcall;

function MEwriteSerialNo(no:Integer; number:PChar):Integer; stdcall;

function GSVgetSerialNo(no:Integer; number:PChar):Integer; stdcall;

function GSVsetThreshold(no:Integer; thon, thoff:Double):Integer; stdcall;

function GSVgetThreshold(no:Integer; var thon, thoff:Double):Integer; stdcall;

function GSVsetChannel(no, channel:Integer):Integer; stdcall;

function GSVstopTransmit(no:Integer):Integer; stdcall;

function GSVstartTransmit(no:Integer):Integer; stdcall;

function GSVclearBuffer(no:Integer):Integer; stdcall;

function GSVsetMode(no, mode:Integer):Integer; stdcall;

function GSVgetMode(no:Integer):Integer; stdcall;

function MEwriteEquipment(no, equip:Integer):Integer; stdcall;

function GSVgetEquipment(no:Integer):Integer; stdcall;

function GSVfirmwareVersion(no:Integer):LongInt; stdcall;

function GSVsetGageFactor(no:Integer; gf:Double):Integer; stdcall;

function GSVgetGageFactor(no:Integer):Double; stdcall;

function GSVsetPoisson(no:Integer; poiss:Double):Integer; stdcall;

function GSVgetPoisson(no:Integer):Double; stdcall;

function GSVsetBridge(no, br:Integer):Integer; stdcall;

function GSVgetBridge(no:Integer):Integer; stdcall;

function MEwriteRange(no:Integer; range:Double):Integer; stdcall;

function GSVgetRange(no:Integer):Double; stdcall;

function MEsetOffsetWait(no:Integer; ow:Double):Integer; stdcall;

function MEgetOffsetWait(no:Integer):Double; stdcall;

function GSVgetOptions(no:Integer):LongInt; stdcall;

function MEwriteOptions(no:Integer; options:LongInt):Integer; stdcall;

function GSVreadMemory(no, addr:Integer; var buffer; status:PInteger):Integer; stdcall;

function GSVwriteMemory(no, addr, check, value:Integer; status:PInteger):Integer; stdcall;

function GSVgetMemoryWait(no:Integer):Double; stdcall;

function GSVgetValue(no:Integer):Integer; stdcall;

function GSVclearMaxValue(no:Integer):Integer; stdcall;

function GSVDispSetDigits(no, digits:Integer):Integer; stdcall;

function GSVDispGetDigits(no:Integer):Integer; stdcall;

function GSVunlockUII(no:Integer):Integer; stdcall;

function GSVlockUII(no:Integer):Integer; stdcall;

function GSVgetLastError(no:Integer):Integer; stdcall;

function GSVsetSecondThreshold(no:Integer; thon, thoff:Double):Integer; stdcall;

function GSVgetSecondThreshold(no:Integer; var thon, thoff:Double):Integer; stdcall;

function GSVgetDeviceType(no:Integer):Integer; stdcall;

function GSVDispCalcNorm(no:Integer):Integer; stdcall;

function GSVsetTxMode(no, txmode:Integer):Integer; stdcall;

function GSVgetTxMode(no:Integer):Integer; stdcall;

function GSVsetBaud(no, baud:Integer):Integer; stdcall;

function GSVgetBaud(no:Integer):Integer; stdcall;

function GSVsetSlowRate(no:Integer; secs:LongInt):Integer; stdcall;

function GSVgetSlowRate(no:Integer):LongInt; stdcall;

function GSVsetSpecialMode(no, smode:Integer):Integer; stdcall;

function GSVgetSpecialMode(no:Integer):Integer; stdcall;

function GSVwriteSamplingRate(no:Integer; freq:Double; factor:Integer):Integer; stdcall;

function GSVreadSamplingRate(no:Integer; freq:PDouble; factor:PInteger):Integer; stdcall;

function GSVsetCanSetting(no, stype, val:Integer):Integer; stdcall;

function GSVgetCanSetting(no, stype:Integer):Integer; stdcall;

function GSVsetAnalogFilter(no:Integer; freq:Double):Integer; stdcall;

function GSVgetAnalogFilter(no:Integer):Double; stdcall;

function GSVisCommandAvailable(no, cmd1, cmd2:Integer):Integer; stdcall;

function GSVsetNoiseCutThreshold(no:Integer; thr:Double):Integer; stdcall;

function GSVgetNoiseCutThreshold(no:Integer):Double; stdcall;
